Fixing the title and reference

--- a/docs/Object Requirements.tex
+++ b/docs/Object Requirements.tex
@@ -5,7 +5,7 @@
 \begin{document}
 % This is the cover letter
 \begin{center}
-{\bf\huge Requirements specification for Object Creator Team}
+{\bf\huge Requirements Specification for Object Creator Team}
 \\[3\baselineskip]
 {\large Software Engineering (CS240)}
 \\[2\baselineskip]
@@ -152,10 +152,8 @@ Documentation:\\
 {\bf\large Glossary/References:}\\[1\baselineskip]
 Sprite: object through which the user will be able to define behaviors/actions.
 \\[1\baselineskip]
-Organizational Requirement Engineering\\
-Chapter 9, Non-functional Requirements\\
-Prof. Dr. Armin B. Cremers\\
-Sascha Alda\\
+Prof. Armin, Cremers, and Alda Sascha. \\
+Organizational Requirement Engineering. Chp. 9. Print.\\
 \url{http://www.iai.uni-bonn.de/III/lehre/vorlesungen/SWT/RE05/slides/09_Non-functional\%20Requirements.pdf}
 
 \end{document}
