--- a/docs/Object Requirements.tex
+++ b/docs/Object Requirements.tex
@@ -39,37 +39,36 @@ September 29, 2013
 
 {\bf\large Use Cases: \\[1\baselineskip] }
 Name: Create Object\\
-Actor(s): User/Sprite creator
-(Sprite creator generates a new sprite for our object, the user specifies parameters of new object)\\
-Preconditions/Assumptions: The view has been initialized, file save location specified(not sure if this is part of program start-up sequence)\\[1\baselineskip]
+Actor(s): Creator(user)
+(Creator specifies parameters of new object)\\
+Preconditions/Assumptions: The view has been initialized\\[1\baselineskip]
 Flow of Events:\\
-1. User selects create new object(potentially through interaction with empty space or UI)\\
-2. UI prompt generated for user to select between importing or creating image for sprite\\
-3. User selects an option and generates image(s) for sprite\\
-4. Object creator generates interface for specifying identifiers(name, references, etc)\\
-5. User submits name for object\\
-6. Images and identifiers converted to JSON/Javascript files and saved into memory.\\
-7. Sprite appears on view and sent to story editor(if available)\\
-8. Object creation interface disappears\\
-9. End of use case\\[1\baselineskip]
+1. Creator creates sprite(see sprite creator or image import)\\
+2. Object creator generates window for text inputs\\
+3. User inputs identifiers for new object\\
+4. Send new object to Sharing module\\[1\baselineskip]
 Alternatives:\\
 - Multiple objects with same name/identifier\\
-- File cannot be saved in specified location\\
+1.Prompt user for different input\\
+2a. User exits, terminating object\\
+2b. User inputs new identifier, change object id\\
 Postconditions: The object creation interface disappears, new sprite is displayed\\[2\baselineskip]
 Name: Create Sprite\\
-Actor(s): User\\
+Actor(s): Creator\\
 Preconditions/Assumptions: The view has been initialized\\
 
 Flow of Events:\\
-1. User selects create new sprite option\\
+1. Creator selects create new sprite option\\
 2. Object creator generates new canvas and sprite creator window\\
-3. User selects tool from Sprite creator options\\
-4. User inputs tool parameters(mouse commands/inputs)\\
+3. Creator selects tool from Sprite creator options\\
+3a. Draw tools prepare canvas for mouse inputs\\
+3b. Geometry tools wait for dimension parameter inputs\\
+3c. Editing tools retrieve draw history\\
+4. Creator inputs tool parameters(mouse commands/inputs)\\
 5. Input added to canvas\\
 6. Repeat actions 3 - 5 as specified by User\\
 7. Store canvas data\\
 8. Close sprite creator window and send to view\\
-9. End of Use Case\\
 
 Postcondition: Sprite creator disappears, sprite is displayed and usable\\[2\baselineskip]
 
