added glossary and references

--- a/docs/VisualEditor_Requirements.tex
+++ b/docs/VisualEditor_Requirements.tex
@@ -769,7 +769,24 @@ an engaging interest that increases their interest in the subject.  Effectivenes
 
 \end{usecase}
 
+\begin{usecase}
 
+\addtitle{Glossary and References}{} 
+
+\addscenario{Glossary}{
+
+\item[Sprite -- ]	A term borrowed from another visual programming editor "Scratch" (found here: http://scratch.mit.edu/). A sprite is like an instantiation of a class in that it is a character with actions (methods) that the programmer might define via the drag and drop IDE.\newline
+
+\item[Development Board -- ]	Or the "working area." This is the area of the IDE that the programmer drags the graphic representations of code to in order to develop programs. Not to be confused with the canvas where the actions specified by the code take place (much like the console of a more typical IDE).\newline
+}
+\addscenario{References}{
+\item [ALICE -- ]	ALICE is a 3D visual programming editor which allows student to drag and drop pieces to create a program. The program, as well as more information on the nature of the program, can be found at alice.org.\newline
+
+\item[LaTeX Template -- ]	This use cases template was created by Tom Desair and can be downloaded at http://www.tomdesair.com/downloads/use-case-latex-template.zip
+
+}
+
+\end{usecase}
 
 
 \end{document}
